@@ -642,6 +642,7 @@ man3_helper_distances_DATA = \
         $(DOX_MAN_DIR)/man3/hwloc_distances_get.3 \
         $(DOX_MAN_DIR)/man3/hwloc_distances_get_by_depth.3 \
         $(DOX_MAN_DIR)/man3/hwloc_distances_get_by_type.3 \
+        $(DOX_MAN_DIR)/man3/hwloc_distances_get_name.3 \
         $(DOX_MAN_DIR)/man3/hwloc_distances_release.3 \
         $(DOX_MAN_DIR)/man3/hwlocality_distances_consult.3 \
         $(DOX_MAN_DIR)/man3/hwloc_distances_obj_index.3 \
