@@ -140,7 +140,7 @@ depth 0:             1 Machine (type #0)
         depth 8:     16 Core (type #2)
          depth 9:    16 PU (type #3)
 Special depth -3:    8 NUMANode (type #13)
-Relative latency matrix (kind 5) between 8 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 8 NUMANodes (depth -3) by logical indexes:
   index     0     1     2     3     4     5     6     7
       0    10    25    25    25    29    29    29    29
       1    25    10    25    25    29    29    29    29
