@@ -41,7 +41,7 @@ depth 0:           1 Machine (type #0)
        depth 7:    4 PU (type #3)
 Special depth -3:  6 NUMANode (type #13)
 Special depth -8:  2 MemCache (type #18)
-Relative latency matrix (kind 5) between 6 NUMANodes (depth -3) by logical indexes:
+Relative latency matrix (name NUMALatency kind 5) between 6 NUMANodes (depth -3) by logical indexes:
   index     0     1     3     4     2     5
       0    10    20    40    40    30    50
       1    20    10    40    40    30    50
